# AI_Assistant

./: CMakeLists.txt  main.cpp  项目规划.md
assets/: app_config.json  mobileclip_labels.json  plugin_behavior_config.json  reminders.db  task_category_eval_report.json  task_category_eval_samples.json
assets/model_01/: model.json  model.json.last_good.json
docs/: desktoper2D_model_format.md  k2d_min_editor_tech.md
scripts/: build_release.bat  sample_perf_baseline.ps1
src/desktoper2D/capture/: screen_capture.h  screen_capture_dxgi.cpp
src/desktoper2D/controllers/: app_bootstrap.cpp  app_bootstrap.h  app_input_controller.cpp  app_input_controller.h  app_loop.cpp  app_loop.h  interaction_controller.cpp  interaction_controller.h  param_controller.cpp  param_controller.h  window_controller.cpp  window_controller.h
src/desktoper2D/core/: async_logger.cpp  async_logger.h  deform.cpp  deform.h  json.cpp  json.h  mesh_generator.cpp  mesh_generator.h  model.cpp  model.h  model_update_pipeline.cpp  model_update_pipeline.h  params.cpp  params.h  png_texture.cpp  png_texture.h
src/desktoper2D/editor/: editor_commands.cpp  editor_commands.h  editor_controller.cpp  editor_controller.h  editor_gizmo.cpp  editor_gizmo.h  editor_input.cpp  editor_input.h  editor_input_binding.cpp  editor_input_binding.h  editor_types.h
src/desktoper2D/lifecycle/: app.cpp  app.h  app_lifecycle.cpp  app_lifecycle.h  behavior_applier.cpp  behavior_applier.h  bridge_assembler.cpp  bridge_assembler.h  bridge_factory.cpp  bridge_factory.h  camera_facemesh_service.cpp  camera_facemesh_service.h  inference_adapter.cpp  inference_adapter.h  legacy_editor_ui_tools.cpp  legacy_editor_ui_tools.h  model_reload_service.cpp  model_reload_service.h  ocr_plugin_module.cpp  ocr_plugin_module.h  ocr_service.cpp  ocr_service.h  perception_pipeline.cpp  perception_pipeline.h  plugin_backend_selector.cpp  plugin_backend_selector.h  plugin_config_validator.cpp  plugin_config_validator.h  plugin_default_behavior.cpp  plugin_lifecycle.cpp  plugin_lifecycle.h  plugin_module.cpp  plugin_module.h  plugin_postprocess.cpp  plugin_postprocess.h  plugin_route_decision.cpp  plugin_route_decision.h  reminder_service.cpp  reminder_service.h  resource_locator.cpp  (+7 more)
src/desktoper2D/lifecycle/asr/: asr_provider.h  asr_session_service.cpp  asr_session_service.h  cloud_asr_provider.cpp  cloud_asr_provider.h  hybrid_asr_provider.cpp  hybrid_asr_provider.h  offline_asr_provider.cpp  offline_asr_provider.h  vad_segmenter.cpp  vad_segmenter.h
src/desktoper2D/lifecycle/bootstrap/: app_bootstrap_steps.cpp  app_bootstrap_steps.h
src/desktoper2D/lifecycle/chat/: chat_provider.h  cloud_chat_provider.cpp  cloud_chat_provider.h  hybrid_chat_provider.cpp  hybrid_chat_provider.h  offline_chat_provider.cpp  offline_chat_provider.h
src/desktoper2D/lifecycle/editor/: editor_interaction_facade.cpp  editor_interaction_facade.h  editor_session_service.cpp  editor_session_service.h
src/desktoper2D/lifecycle/events/: app_event_handler.cpp  app_event_handler.h
src/desktoper2D/lifecycle/observability/: runtime_error_codes.h
src/desktoper2D/lifecycle/orchestrator/: app_orchestrator.cpp  app_orchestrator.h
src/desktoper2D/lifecycle/plugins/: onnx_behavior_plugin.cpp  onnx_behavior_plugin.h
src/desktoper2D/lifecycle/services/: decision_service.cpp  decision_service.h  ocr_postprocess_service.cpp  ocr_postprocess_service.h  plugin_runtime_catalog_service.cpp  plugin_runtime_catalog_service.h  plugin_runtime_config_repository.cpp  plugin_runtime_config_repository.h  plugin_runtime_override_service.cpp  plugin_runtime_override_service.h  plugin_runtime_service.cpp  plugin_runtime_service.h  plugin_runtime_service_internal.cpp  plugin_runtime_service_internal.h  plugin_runtime_switch_service.cpp  plugin_runtime_switch_service.h  task_category_decision.cpp  task_category_decision.h  task_category_features.cpp  task_category_features.h  task_category_scoring.cpp  task_category_scoring.h  task_category_service.cpp  task_category_service.h
src/desktoper2D/lifecycle/state/: app_runtime_state.cpp  app_runtime_state.h  runtime_audio_state.h  runtime_audio_state_ops.cpp  runtime_audio_state_ops.h  runtime_state_ops.cpp  runtime_state_ops.h  runtime_state_slices.h  runtime_window_state.h  task_category_types.h
src/desktoper2D/lifecycle/systems/: app_systems.cpp  app_systems.h  runtime_command_executor.cpp  runtime_tick_entry.cpp  (+4 more)
src/desktoper2D/rendering/: app_renderer.cpp  app_renderer.h
src/k2d/capture/: screen_capture.h  screen_capture_dxgi.cpp
src/k2d/controllers/: app_bootstrap.cpp  app_bootstrap.h  app_input_controller.cpp  app_input_controller.h  app_loop.cpp  app_loop.h  interaction_controller.cpp  interaction_controller.h  param_controller.cpp  param_controller.h  window_controller.cpp  window_controller.h
src/k2d/core/: async_logger.cpp  async_logger.h  deform.cpp  deform.h  json.cpp  json.h  mesh_generator.cpp  mesh_generator.h  model.cpp  model.h  model_update_pipeline.cpp  model_update_pipeline.h  params.cpp  params.h  png_texture.cpp  png_texture.h
src/k2d/editor/: editor_commands.cpp  editor_commands.h  editor_controller.cpp  editor_controller.h  editor_gizmo.cpp  editor_gizmo.h  editor_input.cpp  editor_input.h  editor_input_binding.cpp  editor_input_binding.h
src/k2d/lifecycle/: app.cpp  app.h  app_lifecycle.cpp  app_lifecycle.h  behavior_applier.cpp  behavior_applier.h  bridge_factory.cpp  bridge_factory.h  camera_facemesh_service.cpp  camera_facemesh_service.h  inference_adapter.cpp  inference_adapter.h  legacy_editor_ui_tools.cpp  legacy_editor_ui_tools.h  model_reload_service.cpp  model_reload_service.h  ocr_service.cpp  ocr_service.h  perception_pipeline.cpp  perception_pipeline.h  plugin_lifecycle.cpp  plugin_lifecycle.h  reminder_service.cpp  reminder_service.h  runtime_config_applier.cpp  runtime_config_applier.h  scene_classifier.cpp  scene_classifier.h  system_context_service.cpp  system_context_service.h
src/k2d/rendering/: app_renderer.cpp  app_renderer.h
tests/: lifecycle_decoupling_tests.cpp  plugin_lifecycle_tests.cpp
(+137 files in other folders)
